--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^1.5.3",
+    "@mdx-js/react": "^1.5.3",
     "gatsby": "^2.18.12",
+    "gatsby-plugin-mdx": "^1.0.64",
+    "gatsby-source-filesystem": "^2.1.43",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
