--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "gatsby-plugin-mdx": "^1.0.64",
     "gatsby-plugin-styled-components": "^3.1.16",
     "gatsby-source-filesystem": "^2.1.43",
+    "prism-react-renderer": "^1.0.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-live": "^2.2.2",
     "styled-components": "^4.4.1"
   },
   "devDependencies": {
