Added cover images to blog posts

--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "@mdx-js/react": "^1.5.3",
     "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "^2.18.12",
+    "gatsby-image": "^2.2.37",
     "gatsby-plugin-mdx": "^1.0.64",
+    "gatsby-plugin-sharp": "^2.3.10",
     "gatsby-plugin-styled-components": "^3.1.16",
+    "gatsby-remark-images": "^3.1.39",
     "gatsby-source-filesystem": "^2.1.43",
+    "gatsby-transformer-sharp": "^2.3.9",
     "prism-react-renderer": "^1.0.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
