--- a/package.json
+++ b/package.json
@@ -21,14 +21,18 @@
     "gatsby-image": "^2.2.37",
     "gatsby-plugin-mdx": "^1.0.64",
     "gatsby-plugin-react-helmet": "^3.1.18",
+    "gatsby-plugin-sass": "^2.1.26",
     "gatsby-plugin-sharp": "^2.3.10",
     "gatsby-plugin-styled-components": "^3.1.16",
     "gatsby-remark-images": "^3.1.39",
     "gatsby-source-filesystem": "^2.1.43",
     "gatsby-transformer-sharp": "^2.3.9",
+    "node-sass": "^4.13.0",
     "prism-react-renderer": "^1.0.2",
+    "rbx": "^2.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-icons": "^3.8.0",
     "react-live": "^2.2.2",
     "react-seo-component": "^0.1.16",
     "styled-components": "^4.4.1"
