--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-plugin-styled-components": "^3.1.16",
     "gatsby-remark-images": "^3.1.39",
     "gatsby-source-filesystem": "^2.1.43",
+    "gatsby-transformer-json": "^2.2.22",
     "gatsby-transformer-sharp": "^2.3.9",
     "node-sass": "^4.13.0",
     "prism-react-renderer": "^1.0.2",
