--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "rbx": "^2.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1",
     "react-icons": "^3.8.0",
     "react-live": "^2.2.2",
     "react-seo-component": "^0.1.16",
