--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mdx-js/mdx": "^1.5.3",
     "@mdx-js/react": "^1.5.3",
     "babel-plugin-styled-components": "^1.10.6",
+    "formik": "^2.1.1",
     "gatsby": "^2.18.12",
     "gatsby-image": "^2.2.37",
     "gatsby-plugin-mdx": "^1.0.64",
@@ -37,7 +38,8 @@
     "react-icons": "^3.8.0",
     "react-live": "^2.2.2",
     "react-seo-component": "^0.1.16",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "yup": "^0.28.0"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
