--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@icons-pack/react-simple-icons": "^2.1.0",
     "@mdx-js/mdx": "^1.5.3",
     "@mdx-js/react": "^1.5.3",
     "axios": "^0.19.1",
     "babel-plugin-styled-components": "^1.10.6",
+    "bulma-timeline": "^3.0.4",
     "formik": "^2.1.1",
     "gatsby": "^2.18.12",
     "gatsby-image": "^2.2.37",
     "gatsby-plugin-mdx": "^1.0.64",
+    "gatsby-plugin-nprogress": "^2.1.18",
     "gatsby-plugin-react-helmet": "^3.1.18",
     "gatsby-plugin-sass": "^2.1.26",
     "gatsby-plugin-sharp": "^2.3.10",
@@ -30,6 +33,7 @@
     "gatsby-source-filesystem": "^2.1.43",
     "gatsby-transformer-json": "^2.2.22",
     "gatsby-transformer-sharp": "^2.3.9",
+    "gatsby-v2-plugin-page-transitions": "^1.0.0",
     "node-sass": "^4.13.0",
     "prism-react-renderer": "^1.0.2",
     "rbx": "^2.2.0",
