--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "formik": "^2.1.1",
     "gatsby": "^2.19.5",
     "gatsby-image": "^2.2.37",
+    "gatsby-plugin-anchor-links": "^1.0.11",
     "gatsby-plugin-mdx": "^1.0.64",
     "gatsby-plugin-nprogress": "^2.1.18",
     "gatsby-plugin-react-helmet": "^3.1.18",
