--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-plugin-nprogress": "^2.1.18",
     "gatsby-plugin-react-helmet": "^3.1.18",
     "gatsby-plugin-sass": "^2.1.26",
+    "gatsby-plugin-scroll-indicator": "^1.0.0",
     "gatsby-plugin-scroll-reveal": "^0.0.6",
     "gatsby-plugin-sharp": "^2.4.0",
     "gatsby-plugin-styled-components": "^3.1.16",
