--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
+    "gen-header": "pageres http://localhost:9000 1366x768 --selector='.hero' --delay=1.5 --filename='static/header' --format='jpg' --overwrite",
     "develop": "GATSBY_GRAPHQL_IDE=playground gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
@@ -25,7 +26,6 @@
     "gatsby-plugin-anchor-links": "^1.0.11",
     "gatsby-plugin-manifest": "^2.2.41",
     "gatsby-plugin-mdx": "^1.0.64",
-    "gatsby-plugin-nprogress": "^2.1.18",
     "gatsby-plugin-react-helmet": "^3.1.18",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-root-import": "^2.0.5",
@@ -38,7 +38,6 @@
     "gatsby-source-filesystem": "^2.1.43",
     "gatsby-transformer-json": "^2.2.22",
     "gatsby-transformer-sharp": "^2.3.9",
-    "gatsby-v2-plugin-page-transitions": "^1.0.0",
     "node-sass": "^4.13.0",
     "prism-react-renderer": "^1.0.2",
     "rbx": "^2.2.0",
