--- a/package.json
+++ b/package.json
@@ -26,13 +26,16 @@
     "gatsby-plugin-anchor-links": "^1.0.11",
     "gatsby-plugin-manifest": "^2.2.41",
     "gatsby-plugin-mdx": "^1.0.64",
+    "gatsby-plugin-offline": "^3.0.35",
     "gatsby-plugin-react-helmet": "^3.1.18",
     "gatsby-plugin-react-svg": "^3.0.0",
+    "gatsby-plugin-robots-txt": "^1.5.0",
     "gatsby-plugin-root-import": "^2.0.5",
     "gatsby-plugin-sass": "^2.1.26",
     "gatsby-plugin-scroll-indicator": "^1.0.0",
     "gatsby-plugin-scroll-reveal": "^0.0.6",
     "gatsby-plugin-sharp": "^2.4.0",
+    "gatsby-plugin-sitemap": "^2.2.27",
     "gatsby-plugin-styled-components": "^3.1.16",
     "gatsby-remark-images": "^3.1.39",
     "gatsby-source-filesystem": "^2.1.43",
