--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
   "scripts": {
     "build": "gatsby build",
     "gen-header": "pageres http://localhost:9000 1366x768 --selector='.hero' --delay=1.5 --filename='static/header' --format='jpg' --overwrite",
-    "develop": "GATSBY_GRAPHQL_IDE=playground gatsby develop",
+    "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "clean": "gatsby clean",
+    "clean": "gatsby clean && rimraf src/content",
+    "postinstall": "patch-package",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@fs/gatsby-plugin-drive": "^0.2.1",
     "@mdx-js/mdx": "^1.5.3",
     "@mdx-js/react": "^1.5.3",
     "axios": "^0.19.1",
@@ -42,6 +44,8 @@
     "gatsby-transformer-json": "^2.2.22",
     "gatsby-transformer-sharp": "^2.3.9",
     "node-sass": "^4.13.0",
+    "patch-package": "^6.2.1",
+    "postinstall-postinstall": "^2.0.0",
     "prism-react-renderer": "^1.0.2",
     "rbx": "^2.2.0",
     "react": "^16.12.0",
@@ -49,6 +53,7 @@
     "react-helmet": "^5.2.1",
     "react-live": "^2.2.2",
     "react-seo-component": "^1.0.0",
+    "rimraf": "^3.0.2",
     "styled-components": "5.0.1",
     "typeface-aleo": "^0.0.69",
     "typeface-cooper-hewitt": "^0.0.44",
