--- a/package.json
+++ b/package.json
@@ -22,34 +22,36 @@
     "axios": "^0.19.1",
     "babel-plugin-styled-components": "^1.10.6",
     "bulma-timeline": "^3.0.4",
+    "dotenv": "^8.2.0",
     "formik": "^2.1.1",
-    "gatsby": "^2.19.5",
-    "gatsby-image": "^2.2.37",
-    "gatsby-plugin-anchor-links": "^1.0.11",
+    "gatsby": "^2.20.2",
+    "gatsby-image": "^2.3.0",
+    "gatsby-plugin-anchor-links": "^1.1.1",
     "gatsby-plugin-manifest": "^2.2.41",
-    "gatsby-plugin-mdx": "^1.0.64",
-    "gatsby-plugin-offline": "^3.0.35",
-    "gatsby-plugin-react-helmet": "^3.1.18",
+    "gatsby-plugin-manifest": "^2.3.1",
+    "gatsby-plugin-mdx": "^1.1.0",
+    "gatsby-plugin-offline": "^3.1.0",
+    "gatsby-plugin-react-helmet": "^3.2.0",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-robots-txt": "^1.5.0",
     "gatsby-plugin-root-import": "^2.0.5",
-    "gatsby-plugin-sass": "^2.1.26",
+    "gatsby-plugin-sass": "^2.2.0",
     "gatsby-plugin-scroll-indicator": "^1.0.0",
     "gatsby-plugin-scroll-reveal": "^0.0.6",
-    "gatsby-plugin-sharp": "^2.4.0",
-    "gatsby-plugin-sitemap": "^2.2.27",
+    "gatsby-plugin-sharp": "^2.5.1",
+    "gatsby-plugin-sitemap": "^2.3.0",
     "gatsby-plugin-styled-components": "^3.1.16",
-    "gatsby-remark-images": "^3.1.39",
-    "gatsby-source-filesystem": "^2.1.43",
-    "gatsby-transformer-json": "^2.2.22",
-    "gatsby-transformer-sharp": "^2.3.9",
+    "gatsby-remark-images": "^3.2.0",
+    "gatsby-source-filesystem": "^2.2.1",
+    "gatsby-transformer-json": "^2.3.0",
+    "gatsby-transformer-sharp": "^2.4.1",
     "node-sass": "^4.13.0",
     "patch-package": "^6.2.1",
     "postinstall-postinstall": "^2.0.0",
     "prism-react-renderer": "^1.0.2",
     "rbx": "^2.2.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
     "react-live": "^2.2.2",
     "react-seo-component": "^1.0.0",
@@ -58,6 +60,7 @@
     "typeface-aleo": "^0.0.69",
     "typeface-cooper-hewitt": "^0.0.44",
     "yup": "^0.28.0"
+    "yup": "^0.28.3"
   },
   "devDependencies": {
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.8",
