--- a/package.json
+++ b/package.json
@@ -11,54 +11,54 @@
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "clean": "gatsby clean && rimraf node_modules/ yarn.lock && yarn",
+    "clean": "gatsby clean && rimraf node_modules/ package-lock.json && npm i",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@fontsource/aleo": "^4.2.2",
+    "@fontsource/cooper-hewitt": "^4.2.4",
     "@mdx-js/mdx": "^1.5.3",
     "@mdx-js/react": "^1.5.3",
-    "axios": "^0.19.1",
+    "axios": "^0.21.1",
     "babel-plugin-styled-components": "^1.10.6",
     "bulma-timeline": "^3.0.4",
     "dotenv": "^8.2.0",
     "formik": "^2.1.1",
-    "gatsby": "^2.20.2",
-    "gatsby-image": "^2.3.0",
+    "gatsby": "^3.2.1",
+    "gatsby-image": "^3.2.0",
     "gatsby-plugin-anchor-links": "^1.1.1",
-    "gatsby-plugin-manifest": "^2.3.1",
-    "gatsby-plugin-mdx": "^1.1.0",
-    "gatsby-plugin-offline": "^3.1.0",
-    "gatsby-plugin-react-helmet": "^3.2.0",
+    "gatsby-plugin-manifest": "^3.2.0",
+    "gatsby-plugin-mdx": "^2.2.0",
+    "gatsby-plugin-offline": "^4.2.0",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-robots-txt": "^1.5.0",
     "gatsby-plugin-root-import": "^2.0.5",
-    "gatsby-plugin-sass": "^2.2.0",
+    "gatsby-plugin-sass": "^4.2.0",
     "gatsby-plugin-scroll-indicator": "^1.0.0",
-    "gatsby-plugin-scroll-reveal": "^0.0.6",
-    "gatsby-plugin-sharp": "^2.5.1",
-    "gatsby-plugin-sitemap": "^2.3.0",
-    "gatsby-plugin-styled-components": "^3.1.16",
-    "gatsby-remark-images": "^3.2.0",
-    "gatsby-source-filesystem": "^2.2.1",
-    "gatsby-transformer-json": "^2.3.0",
-    "gatsby-transformer-sharp": "^2.4.1",
-    "node-sass": "^4.13.0",
+    "gatsby-plugin-scroll-reveal": "0.0.7",
+    "gatsby-plugin-sharp": "^3.2.1",
+    "gatsby-plugin-sitemap": "^3.2.0",
+    "gatsby-plugin-styled-components": "^4.2.0",
+    "gatsby-remark-images": "^4.2.0",
+    "gatsby-source-filesystem": "^3.2.0",
+    "gatsby-transformer-json": "^3.2.0",
+    "gatsby-transformer-sharp": "^3.2.0",
+    "node-sass": "^5.0.0",
+    "path": "^0.12.7",
     "prism-react-renderer": "^1.0.2",
     "rbx": "^2.2.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^5.2.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-live": "^2.2.2",
-    "react-seo-component": "^1.0.0",
+    "react-seo-component": "^2.0.2",
     "rimraf": "^3.0.2",
-    "styled-components": "5.0.1",
-    "typeface-aleo": "^0.0.69",
-    "typeface-cooper-hewitt": "^0.0.44",
-    "yup": "^0.28.3"
+    "styled-components": "^5.2.3",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.8",
-    "prettier": "^1.19.1"
+    "prettier": "^2.2.1"
   },
   "repository": {
     "type": "git",
